fixed the overflow part in right side container now overflow is handled through scroll

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   background-color: #121212;
   color: white;
   min-height: 100vh;
-  /* max-height: 100%; */
+  max-height: 100vh;
   min-width: 100vw;
   /* max-width: 100%; */
   display: flex;
@@ -214,6 +214,8 @@ input[type="text"]:focus {
   flex: 1;
   padding: 10px;
   width: 100%;
+  min-height: 0;
+  /* overflow: hidden; */
 }
 
 .left {
@@ -369,11 +371,13 @@ input[type="text"]:focus {
 
 .right {
   width: 75%;
-  /* height: 78vh; */
+  min-height: 78vh;
+  max-height: 100%;
   border-radius: 15px;
+  display: flex;
   border: 2px solid transparent;
-  background: linear-gradient(to left, #121212, #1e1f1f);
-  overflow-y: auto;
+  background: linear-gradient(165deg,#272828, #121212);
+  overflow-y: scroll;
 }
 
 /* --- Webkit Scrollbar (Chrome, Safari, Edge) --- Code referred from chatgpt*/
